--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "compile:es5": "npx tsc --build configs/tsconfig.es5.json",
     "compile:win": "rd /s /q \"dist/lib\" && npm run compile:es6 && npm run compile:es5",
     "compile": "rm -rf dist/lib && npm run compile:es6 && npm run compile:es5",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest --verbose"
   },
   "keywords": [
     "Jquery",
@@ -19,7 +19,21 @@
   "author": "Youssef Ameachaq",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.2",
+    "@babel/preset-typescript": "^7.21.5",
+    "@jest/globals": "^29.5.0",
+    "jest": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
+    "jsdom": "^22.0.0",
+    "ts-jest": "^29.1.0"
+  },
+  "jest": {
+    "automock": false,
+    "setupFiles": [
+      "./configs/setupJest.js"
+    ]
   }
 }
